# Buckle-Consult-Agent

./: README.md  pyproject.toml
src/buckle_consult_crew_automation_recommendation/: crew.py  main.py
src/buckle_consult_crew_automation_recommendation/config/: agents.yaml  tasks.yaml
