[project]
name = "buckle_consult_crew_automation_recommendation"
version = "0.1.0"
description = "buckle_consult_crew_automation_recommendation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
buckle_consult_crew_automation_recommendation = "buckle_consult_crew_automation_recommendation.main:run"
run_crew = "buckle_consult_crew_automation_recommendation.main:run"
train = "buckle_consult_crew_automation_recommendation.main:train"
replay = "buckle_consult_crew_automation_recommendation.main:replay"
test = "buckle_consult_crew_automation_recommendation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
